manifests/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: example-route
    namespace: apis
spec:
    hosts:
        - api-dev.coordiutil.com
    gateways:
        - apis/api-gateway
    http:
        - match:
              - uri:
                    exact: /
          route:
              - destination:
                    host: example
                    port:
                        number: 8080
